# sports-betting

./: .env.example  .gitignore  HONEST_STATUS.md  LICENSE  README.md  pyproject.toml  ud_edge_daily_report.py
data/: draftkings_demo.csv  prizepicks_demo.csv  sharp_lines.csv
docs/: AUDIT_V1_2026-07-20.md  METHODOLOGY.md  MISPRICING_REAUDIT_4855201.md  MISPRICING_REMEDIATION_AUDIT.md  MISPRICING_STRATEGY_AUDIT.md  PROPLINE_BUDGET.md
scripts/: optimized_picks.py  test_telegram.py  ud_edge_daily_report.py  ud_edge_fire.py  ud_edge_pf_fire.py
tests/: test_audit_p0_console_residual.py  test_audit_p0_deliver_residual.py  test_audit_p0_lineup_ev_contract.py  test_audit_p0_probability_contract.py  test_audit_p1_documentation.py  test_audit_p1_line_tolerance.py  test_audit_p1_line_tolerance_plumbing.py  test_audit_p1_poller_budget.py  test_audit_p1_poller_ranked_rebuild.py  test_audit_p1_propline_cache_fallback.py  test_audit_v3_residuals.py  test_book_scrapers.py  test_broker.py  test_budget.py  test_correlation.py  test_cron_only_guard.py  test_dashboard.py  test_dashboard_batch.py  test_dashboard_v2.py  test_dashboard_wave0.py  test_flex_math_wave1.py  test_lineup_selector.py  test_matcher_wave2b.py  test_misprice.py  test_no_vig.py  test_notify.py  test_poller.py  test_poller_broker.py  test_propline.py  test_propline_client.py  test_reaudit_regressions.py  test_safety_gate.py  test_second_source.py  test_sharp_books_wave2a.py  test_stale_pricing.py  test_ud_edge_daily_report.py  test_ud_edge_fire.py  test_ud_edge_pf_fire.py  test_wave3a_source_dedupe.py  (+4 more)
(+35 files in other folders)
