[project]
name = "ud-edge-bot"
version = "0.1.0"
description = "No-vig +EV detector for Underdog Fantasy player props"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
scrapers = [
    "curl_cffi>=0.6",
]

[project.scripts]
ud-edge = "ud_edge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ud_edge"]

[tool.pytest.ini_options]
testpaths = ["tests"]