[project]
name = "ud-edge-bot"
version = "0.2.0"
description = "Sharp-vs-fantasy mispricing detector + Edge Board dashboard"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",   # TestClient needs httpx in CI (was missing locally)
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
ud-edge = "ud_edge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ud_edge"]

[tool.hatch.build.targets.wheel.force-include]
"ud_edge/dashboard/static" = "ud_edge/dashboard/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
